# Kraken2D

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: Engine.cpp  Engine.h
src/ecs/: ComponentArray.h  ComponentManager.h  Components.h  EntityManager.h  Systems.h
